--- a/references.bib
+++ b/references.bib
@@ -19,6 +19,33 @@
     pages = {93-140}
 }
 
+@article{Hormander1,
+    author = {H\"{o}rmander, Lars},
+    title = {The Spectral Function of an Elliptic Operator},
+    journal = {Acta Math.},
+    volume = {121},
+    year = {1968},
+    pages = {193-218}
+}
+
+@book{HeinzHopf,
+    author = {Hopf, Heinz},
+    title = {Differential Geometry in the Large},
+    year = {1989},
+    publisher = {Springer-Verlag},
+    volume = {1000},
+    series = {Lectures Notes in Mathematics}
+}
+
+@book{BaoChern,
+    author = {Bao, D. and Chern S.-S. and Shen Z.},
+    title = {An Introduction to {R}iemann-{F}insler Geometry},
+    year = {2000},
+    publisher = {Springer-Verlag},
+    volume = {200},
+    series = {Graduate Texts in Mathematics}
+}
+
 @article{deLeeuw,
     author = {de Leeuw, Karel},
     title = {On $L_p$ Multipliers},
@@ -75,6 +102,16 @@
     number = {1},
     year = {1986},
     pages = {1-24}
+}
+
+@article{SeegerSingular,
+    author = {Seeger, Andreas},
+    title = {Some Inequalities For Singular Convolution Operators In $L^p$-Spaces},
+    journal = {Trans. Amer. Math. Soc.},
+    volume = {308},
+    number = {1},
+    year = {1988},
+    pages = {259-272}
 }
 
 @article{SeegerSoggeStein,
@@ -185,6 +222,16 @@
     number = {7},
     year = {2013},
     pages = {745-755}
+}
+
+@article{LeeSeeger2,
+    author = {Lee, Sanghyuk and Seeger, Andreas},
+    title = {On radial {F}ourier multipliers and almost everywhere convergence},
+    journal = {J. Lond. Math. Soc.},
+    volume = {91},
+    number = {2},
+    year = {2015},
+    pages = {105-126}
 }
 
 @phdthesis{Alladi,
