--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 \renewcommand{\headrulewidth}{0pt}
 \setlength{\headheight}{14pt}
 
+\usepackage{xfrac}
+
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
@@ -146,9 +148,9 @@ Supported by grant numbers...
 \chapter{Future Work}
 \input{chapters/conclusion}
 
-\appendix
-\chapter{Appendix Title}
-\input{chapters/appendix}
+%\appendix
+%\chapter{Appendix Title}
+%\input{chapters/appendix}
 
 \singlespacing
 \printbibliography
