--- a/notation.tex
+++ b/notation.tex
@@ -29,5 +29,13 @@
     %
     \[ A f(x) = \int_Y A(x,y) f(y)\; dy. \]
 
-%    \item For integers $n$ and $m$, we let $\llbracket n,m \rrbracket \coloneqq \{ n, n+1, \dots, m \}$.
+    \item For $1 \leq p \leq \infty$ and $s \in \RR$, we consider the Sobolev spaces
+    %
+    \[ \| f \|_{W^{s,p}(\RR^d)} = \| (-\Delta)^{s/2} f \|_{L^p(\RR^d)}, \]
+    %
+    and for $1 \leq r \leq \infty$, we consider the Besov spaces
+    %
+    \[ \| f \|_{B^{s,p}_r(\RR^d)} = \| P_k f \|_{l^r_k L^p(\RR^d)}, \]
+    %
+    where $\{ P_k \}$ are Littlewood-Paley projections.
 \end{itemize}
