--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,4 @@
-
+%!TEX root = main.tex
 
 \fancyhf{} % clear all header and footer fields
 \fancyhead[RO,R]{\thepage} %RO=right odd, RE=right even
@@ -6,14 +6,14 @@
 
 \begin{center}
     \Large
-    \textbf{Thesis Title}
+    \textbf{Multipliers of Elliptic Operators on Compact Manifolds}
     
     \vspace{0.4cm}
     \large
-    Thesis Subtitle
+    Necessary and Sufficient Conditions For Boundedness
     
     \vspace{0.4cm}
-    \textbf{Author Name}
+    \textbf{Jacob Denson}
     
     \vspace{0.9cm}
     \textbf{Abstract}
