--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,32 @@
 %    \emph{Oscillatory Integrals and Spherical Harmonics},
 %    1985.
 
+@book{Arnold,
+    author = {Arnold, Vladimir},
+    title = {Mathematical Methods in Classical Mechanics},
+    year = {1974},
+    publisher = {Springer-Verlag},
+    volume = {60},
+    series = {Graduate Texts in Mathematics}
+}
+
+@article{Matsumoto,
+    author = {Matsumoto, Makoto},
+    title = {A slope of mountain is a {F}insler surface with respect to a time measure},
+    journal = {J. Math. Kyoto Univ.},
+    volume = {29},
+    year = {1989},
+    pages = {17-25}
+}
+
+@book{Treves2,
+    author = {Treves, François},
+    year = {1980},
+    title = {Introduction to Pseudodifferential and {F}ourier Integral Operators},
+    volume = {2},
+    publisher = {Plenum Press}
+}
+
 @article{Hormander1,
     author = {H\"{o}rmander, Lars},
     title = {Estimates for translation invariant operators in {$L^p$} spaces},
@@ -192,6 +218,13 @@
     number = {6},
     year = {2011 (ArXiv 2010)},
     pages = {1239-1295}
+}
+
+@book{Hormander4,
+    author = {H\"{o}rmander, Lars},
+    title = {The Analysis of Linear Partial Differential Operators {IV}: {F}ourier Integral Operators},
+    year = {1985},
+    publisher = {Springer Verlag}
 }
 
 @article{HeoandYang,
