--- a/abstract.tex
+++ b/abstract.tex
@@ -18,8 +18,9 @@
     \vspace{0.9cm}
     \textbf{Abstract}
 \end{center}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+For any bounded, regulated function $a: [0,\infty) \to \mathbb{C}$, consider the family of operators $\{ T_R \}$ on the sphere $S^d$ such that $T_R f = a(k/R) f$ for any spherical harmonic $f$ of degree $k$. This thesis discusses the work of the author on characterizing the functions $a$ for which the operators $\{ T_R \}$ are uniformly bounded on $L^p(S^d)$ in the range $1/(d-1) < |1/p - 1/2| < 1/2$. More generally, we obtain analogous results in the more general setting of multiplier operators for eigenfunction expansions of an elliptic pseudodifferential operator $P$ on a compact manifold $X$, under curvature assumptions on the principal symbol of $P$, and assuming the eigenvalues of $P$ are contained in an arithmetic progression, assuming that the function $a$ defining the eigenfunction expansion is compactly supported.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+One consequence of our result are new transference principles controlling the $L^p$ boundedness of the multiplier operators associated with a function $a$, in terms of the $L^p$ operator norm of the radial Fourier multiplier operator on $\RR^d$ with symbol $a(|\cdot|): \mathbb{R}^d \to \mathbb{C}$, the first nontrivial result of it's kind. The latter results have been published in \cite{Denson}, and the former results have yet to be described elsewhere. In order to prove these results, we obtain new quasi-orthogonality estimates for averages of solutions to the half-wave equation $\partial_t - i P = 0$, via a connection between pseudodifferential operators satisfying an appropriate curvature condition and Finsler geometry, as well as utilizing atomic decompositions on manifolds.
+
+In Part I of the thesis, we review prior work on endpoint bounds relevant to the new results stated, in particular, endpoint bounds for radial and quasi-radial Fourier multiplier operators on Euclidean space, as well as Finsler geometry and Fourier integral operators on compact manifolds. In Part II, we prove the results stated above.
