--- a/main.tex
+++ b/main.tex
@@ -136,10 +136,10 @@
 %\input{chapters/chapter03}
 
 \part{New Results}
-\chapter{The Boundedness of Spectral Multipliers with Compact Support}
+\chapter{The Boundedness of Spectral Multipliers with Compact Support} \label{chap:boundedsinglefrequencyscale}
 \input{chapters/2-singlescalemultipliers}
 
-\chapter{Combining Scales Via Atomic Decompositions}
+\chapter{Combining Scales Via Atomic Decompositions} \label{chap:spectralatomicdchapter}
 \input{chapters/3-atomicdecompositions}
 
 %\chapter{Future Work}
