--- a/references.bib
+++ b/references.bib
@@ -341,6 +341,14 @@
     pages = {551-581}
 }
 
+@unpublished{Denson,
+    author = {Denson, Jacob},
+    title = {Multipliers for Spherical Harmonic Expansions},
+    howpublished={"\url{https://arxiv.org/abs/2410.23505}"},
+    year = {(ArXiv 2024)},
+    note = {ArXiv Preprint}
+}
+
 @unpublished{GuoandOhandWangandWuandZhang,
     author = {Guo, Shaoming and Oh, Changkeun and Wang, Hong and Wu, Shukun and Zhang, Ruixiang},
     title = {The {B}ochner-{R}iesz Problem: An Old Approach Revisited},
