--- a/references.bib
+++ b/references.bib
@@ -35,6 +35,13 @@
     publisher = {Plenum Press}
 }
 
+@book{SteinWeiss,
+    author = {Stein, Elias and Weiss, Guido},
+    year = {1971},
+    title = {Introduction to {F}ourier Analysis on {E}uclidean Spaces},
+    publisher = {Princeton University Press}
+}
+
 @article{Hormander1,
     author = {H\"{o}rmander, Lars},
     title = {Estimates for translation invariant operators in {$L^p$} spaces},
