--- a/abstract.tex
+++ b/abstract.tex
@@ -19,8 +19,10 @@
     \textbf{Abstract}
 \end{center}
 
-For any bounded, regulated function $a: [0,\infty) \to \mathbb{C}$, consider the family of operators $\{ T_R \}$ on the sphere $S^d$ such that $T_R f = a(k/R) f$ for any spherical harmonic $f$ of degree $k$. This thesis discusses the work of the author on characterizing the functions $a$ for which the operators $\{ T_R \}$ are uniformly bounded on $L^p(S^d)$ in the range $1/(d-1) < |1/p - 1/2| < 1/2$. More generally, we obtain analogous results in the more general setting of multiplier operators for eigenfunction expansions of an elliptic pseudodifferential operator $P$ on a compact manifold $X$, under curvature assumptions on the principal symbol of $P$, and assuming the eigenvalues of $P$ are contained in an arithmetic progression, assuming that the function $a$ defining the eigenfunction expansion is compactly supported.
+For any bounded, regulated function $a: [0,\infty) \to \mathbb{C}$, consider the family of operators $\{ T_R \}$ on the sphere $S^d$ such that $T_R f = a(k/R) f$ for any spherical harmonic $f$ of degree $k$. This thesis discusses the work of the author on characterizing the functions $a$ for which the operators $\{ T_R \}$ are uniformly bounded on $L^p(S^d)$ in the range $1/(d-1) < |1/p - 1/2| < 1/2$. More generally, we obtain analogous results for spectral multiplier operators of eigenfunction expansions of a first order elliptic pseudo-differential operator $P$ on a compact manifold $X$. Under curvature assumptions on the principal symbol of the operator $P$, and assuming the eigenvalues of $P$ are contained in an arithmetic progression, we characterize all regulated and compactly supported functions $a$ whose associated spectral multiplier operators $\{ a(P/R) \}$ are uniformly bounded on $L^p(X)$, under curvature assumptions on the principal symbol of $P$, and assuming the eigenvalues of $P$ are contained in an arithmetic progression. If in addition, we assume that solutions to the wave equation $\partial_t^2 u = P^2 u$ have finite propagation speed, and that certain estimates for the wave equation hold, then we characterize all regulated functions whose associated operators $\{ T_R \}$ are uniformly bounded on $L^p(X)$, without the assumption of compact support.
 
-One consequence of our result are new transference principles controlling the $L^p$ boundedness of the multiplier operators associated with a function $a$, in terms of the $L^p$ operator norm of the radial Fourier multiplier operator on $\RR^d$ with symbol $a(|\cdot|): \mathbb{R}^d \to \mathbb{C}$, the first nontrivial result of it's kind. The latter results have been published in \cite{Denson}, and the former results have yet to be described elsewhere. In order to prove these results, we obtain new quasi-orthogonality estimates for averages of solutions to the half-wave equation $\partial_t - i P = 0$, via a connection between pseudodifferential operators satisfying an appropriate curvature condition and Finsler geometry, as well as utilizing atomic decompositions on manifolds.
+One consequence of this result are new transference principles controlling the $L^p$ boundedness of the multiplier operators associated with a function $a$ in terms of the $L^p$ operator norm of the radial Fourier multiplier operator on $\RR^d$ with symbol $a(|\cdot|): \mathbb{R}^d \to \mathbb{C}$, the first nontrivial result of it's kind.
 
-In Part I of the thesis, we review prior work on endpoint bounds relevant to the new results stated, in particular, endpoint bounds for radial and quasi-radial Fourier multiplier operators on Euclidean space, as well as Finsler geometry and Fourier integral operators on compact manifolds. In Part II, we prove the results stated above.
+In order to prove these results, we obtain new quasi-orthogonality estimates for averages of solutions to the half-wave equation $\partial_t - i P = 0$, via a connection between pseudo-differential operators satisfying an appropriate curvature condition and Finsler geometry, and combine estimates for different frequency scales via arguments based on a theory of atomic decompositions in $L^p$ for $p > 1$, first introduced in \cite{SeegerRemarks}.
+
+In Part I of the thesis, we review prior work on endpoint bounds relevant to the new results stated, in particular, endpoint bounds for radial and quasi-radial Fourier multiplier operators on Euclidean space, as well as Finsler geometry and Fourier integral operators on compact manifolds. In Part II, we prove the results stated above. The characterizations of $L^p$ boundedness for compactly supported and regulated functions are adapted from a paper of the author \cite{Denson}, with the other results in forthcoming work.
