--- a/references.bib
+++ b/references.bib
@@ -35,6 +35,15 @@
     publisher = {Plenum Press}
 }
 
+@book{Besse,
+    author = {Besse, Arthur L.},
+    title = {Manifolds all of whose Geodesics are Closed},
+    year = {1978},
+    publisher = {Springer Berlin, Heidelberg},
+    volume = {93},
+    series = {A Series of Modern Surveys in Mathematics}
+}
+
 @book{SteinWeiss,
     author = {Stein, Elias and Weiss, Guido},
     year = {1971},
@@ -52,7 +61,7 @@
     pages = {93-140}
 }
 
-@article{Hormander1,
+@article{HormanderSpectral,
     author = {H\"{o}rmander, Lars},
     title = {The Spectral Function of an Elliptic Operator},
     journal = {Acta Math.},
@@ -167,15 +176,25 @@
     pages = {709-736}
 }
 
+@article{SeegerRemarks,
+    author = {Seeger, Andreas},
+    title = {Remarks on singular convolution operators},
+    journal = {Studia Math.},
+    volume = {97},
+    number = {2},
+    year = {1990},
+    pages = {91-114}
+}
+
 @article{Minicozzi,
     author = {Minicozzi, William P. and Sogge, Christopher D.},
     title = {Negative Results for {N}ikodym Maximal Functions and Related Oscillatory Integrals in Curved Spaces},
     journal = {Math. Res. Lett.},
     volume = {4},
     number = {2},
-    year = {2000 (ArXiv 1999)},
+    year = {2000},
     pages = {221-237}
-}
+} (ArXiv 1999)
 
 @article{Tao,
     author = {Tao, Terence},
@@ -193,22 +212,22 @@
     journal = {Math. Ann.},
     volume = {342},
     number = {1},
-    year = {2008 (ArXiv 2007)},
+    year = {2008},
     pages = {31-68}
-}
+} (ArXiv 2007)
 
 @article{HeoandNazarovandSeeger,
-    author = {Heo, Yaryong and Nazarov, Fdor and Seeger, Andreas},
+    author = {Heo, Yaryong and Nazarov, Fedor and Seeger, Andreas},
     title = {Radial {F}ourier Multipliers in High Dimensions},
     journal = {Acta Math.},
     volume = {206},
     number = {1},
-    year = {2011 (ArXiv 2009)},
+    year = {2011},
     pages = {55-92}
-}
+} (ArXiv 2009)
 
 @article{HeoandNazarovandSeeger2,
-    author = {Heo, Yaryong and Nazarov, Fdor and Seeger, Andreas},
+    author = {Heo, Yaryong and Nazarov, Fedor and Seeger, Andreas},
     title = {On Radial and Conical {F}ourier Multipliers},
     journal = {J. Geom. Anal.},
     volume = {21},
@@ -223,9 +242,9 @@
     journal = {Geom. Funct. Anal.},
     volume = {21},
     number = {6},
-    year = {2011 (ArXiv 2010)},
+    year = {2011},
     pages = {1239-1295}
-}
+} (ArXiv 2010)
 
 @book{Hormander4,
     author = {H\"{o}rmander, Lars},
@@ -250,9 +269,9 @@
     journal = {Illinois J. Math.},
     volume = {56},
     number = {4},
-    year = {2012 (ArXiv 2011)},
+    year = {2012},
     pages = {1281-1295}
-}
+} (ArXiv 2011)
 
 @article{LeeSeeger,
     author = {Lee, Sanghyuk and Seeger, Andreas},
@@ -296,9 +315,9 @@
     title = {Endpoint bounds for quasiradial {F}ourier multipliers},
     journal = {Ann. Mat. Pura Appl. (4)},
     volume = {196},
-    year = {2017 (ArXiv 2015)},
+    year = {2017},
     pages = {773-789}
-}
+} (ArXiv 2015)
 
 @article{Cladek,
     author = {Cladek, Laura},
@@ -306,9 +325,9 @@
     journal = {Anal. PDE},
     volume = {11},
     number = {2},
-    year = {2018 (arXiv 2016)},
+    year = {2018},
     pages = {467-498}
-}
+} (arXiv 2016)
 
 @article{KimSpectral,
     author = {Kim, Jongchon},
@@ -316,9 +335,9 @@
     journal = {Indiana Univ. Math. J.},
     volume = {67},
     number = {2},
-    year = {2018 (ArXiv 2016)},
+    year = {2018},
     pages = {937-969}
-}
+} (ArXiv 2016)
 
 @article{KatzandRogers,
     author = {Katz, Nets Hawk and Rogers, Keith M.},
@@ -326,17 +345,17 @@
     journal = {Geom. Funct. Anal.},
     volume = {28},
     number = {6},
-    year = {2018 (ArXiV 2018)},
+    year = {2018},
     pages = {1706-1716}
-}
+} (ArXiV 2018)
 
 @InProceedings{BeltranandHickmanandSogge,
     author = {Beltran, David and Hickman, Jonathan and Sogge, Christopher D.},
     title = {Sharp Local Smoothing Estimates for {F}ourier Integral Operators},
     booktitle="Geometric Aspects of Harmonic Analysis",
-    year = {2021 (ArXiv 2019)},
+    year = {2021},
     pages = {29-105}
-}
+} (ArXiv 2019)
 
 @article{GuthandWangandZhang,
     author = {Guth, Larry and Wang, Hong and Zhang, Ruixiang},
@@ -344,15 +363,15 @@
     journal = {Ann. of Math.},
     volume = {192},
     number = {2},
-    year = {2020 (ArXiv 2019)},
+    year = {2020},
     pages = {551-581}
-}
+} (ArXiv 2019)
 
 @unpublished{Denson,
     author = {Denson, Jacob},
     title = {Multipliers for Spherical Harmonic Expansions},
     howpublished={"\url{https://arxiv.org/abs/2410.23505}"},
-    year = {(ArXiv 2024)},
+    year = {2024},
     note = {ArXiv Preprint}
 }
 
@@ -360,7 +379,7 @@
     author = {Guo, Shaoming and Oh, Changkeun and Wang, Hong and Wu, Shukun and Zhang, Ruixiang},
     title = {The {B}ochner-{R}iesz Problem: An Old Approach Revisited},
     howpublished = {"\url{https://arxiv.org/abs/2104.11188}"},
-    year = {(ArXiv 2021)},
+    year = {2021},
     note = {Arxiv Preprint}
 }
 
@@ -370,9 +389,9 @@
     journal = {Math. Proc. Cambridge Philos. Soc.},
     volume = {172},
     number = {2},
-    year = {2021 (ArXiv 2021)},
+    year = {2021},
     pages = {1-21}
-}
+}  (ArXiv 2021)
 
 
 
