--- a/references.bib
+++ b/references.bib
@@ -375,6 +375,26 @@
     note = {ArXiv Preprint}
 }
 
+@article{DaiGongGuoZhang,
+    author = {Dai, Song and Gong, Liuwei and Zhang, Ruixiang},
+    title = {Oscillatory integral operators on manifolds and related {K}akeya and {N}ikodym problems},
+    journal = {Camb. J. Math.},
+    volume = {12},
+    number = {4},
+    year = {2024},
+    pages = {937-1015}
+}
+
+@article{GuoWangZhang,
+    author = {Guo, Shaoming and Wang, Hong and Zhang, Ruixiang},
+    title = {A dichotomy for {H}\"{o}rmander-type oscillatory integral operators},
+    journal = {Invent. Math.},
+    volume = {238},
+    number = {2},
+    year = {2024},
+    pages = {503-584}
+}
+
 @unpublished{GuoandOhandWangandWuandZhang,
     author = {Guo, Shaoming and Oh, Changkeun and Wang, Hong and Wu, Shukun and Zhang, Ruixiang},
     title = {The {B}ochner-{R}iesz Problem: An Old Approach Revisited},
