--- a/references.bib
+++ b/references.bib
@@ -126,6 +126,15 @@
     pages = {521-530}
 }
 
+@article{Peetre,
+    author = {Peetre, Jaak},
+    title = {On spaces of {T}riebel-{L}izorkin type},
+    journal = {Ark. Math.},
+    volume = {13},
+    year = {1975},
+    pages = {123-130}
+}
+
 @article{KenigStantonTomas,
     author = {Kenig, Carlos E. and Stanton, Robert J. and Tomas, Peter A.},
     title = {Divergence of Eigenfunction Expansions},
