--- a/references.bib
+++ b/references.bib
@@ -20,7 +20,7 @@
 
 @article{Matsumoto,
     author = {Matsumoto, Makoto},
-    title = {A slope of mountain is a {F}insler surface with respect to a time measure},
+    title = {A Slope of a Mountain is a {F}insler Surface With Respect to a Time Measure},
     journal = {J. Math. Kyoto Univ.},
     volume = {29},
     year = {1989},
@@ -37,7 +37,7 @@
 
 @book{Besse,
     author = {Besse, Arthur L.},
-    title = {Manifolds all of whose Geodesics are Closed},
+    title = {Manifolds All of Whose Geodesics Are Closed},
     year = {1978},
     publisher = {Springer Berlin, Heidelberg},
     volume = {93},
@@ -53,7 +53,7 @@
 
 @article{Hormander1,
     author = {H\"{o}rmander, Lars},
-    title = {Estimates for translation invariant operators in {$L^p$} spaces},
+    title = {Estimates For Translation Invariant Operators In {$L^p$} Spaces},
     journal = {Acta Math.},
     volume = {104},
     number = {1-2},
@@ -63,7 +63,7 @@
 
 @article{HormanderSpectral,
     author = {H\"{o}rmander, Lars},
-    title = {The Spectral Function of an Elliptic Operator},
+    title = {The Spectral Function Of An Elliptic Operator},
     journal = {Acta Math.},
     volume = {121},
     year = {1968},
@@ -72,7 +72,7 @@
 
 @book{HeinzHopf,
     author = {Hopf, Heinz},
-    title = {Differential Geometry in the Large},
+    title = {Differential Geometry In The Large},
     year = {1989},
     publisher = {Springer-Verlag},
     volume = {1000},
@@ -100,8 +100,8 @@
 
 @article{Seeley,
     author = {Seeley, Robert Thomas},
-    title = {Complex powers of an elliptic operator},
-    journal = {Proc.Symp.Pure Math.},
+    title = {Complex Powers Of An Elliptic Operator},
+    journal = {Proc. Symp. Pure Math.},
     volume = {10},
     year = {1967},
     pages = {288-307}
@@ -109,7 +109,7 @@
 
 @article{Fefferman,
     author = {Fefferman, Charles},
-    title = {The Multiplier Problem for the Ball},
+    title = {The Multiplier Problem For The Ball},
     journal = {Ann. of Math. (2)},
     volume = {94},
     number = {2},
@@ -128,7 +128,7 @@
 
 @article{Peetre,
     author = {Peetre, Jaak},
-    title = {On spaces of {T}riebel-{L}izorkin type},
+    title = {On Spaces of {T}riebel-{L}izorkin Type},
     journal = {Ark. Math.},
     volume = {13},
     year = {1975},
@@ -147,7 +147,7 @@
 
 @article{Dappa,
     author = {Dappa, Henry},
-    title = {Quasi-radial Multipliers},
+    title = {Quasi-Radial Multipliers},
     journal = {Studia Math.},
     volume = {84},
     number = {1},
@@ -157,7 +157,7 @@
 
 @article{SeegerSingular,
     author = {Seeger, Andreas},
-    title = {Some Inequalities For Singular Convolution Operators In $L^p$-Spaces},
+    title = {Some Inequalities for Singular Convolution Operators in $L^p$-Spaces},
     journal = {Trans. Amer. Math. Soc.},
     volume = {308},
     number = {1},
@@ -177,7 +177,7 @@
 
 @article{SeegerSogge,
     author = {Seeger, Andreas and Sogge, Christopher D.},
-    title = {On the Boundedness of Functions of (Pseudo) Differential Operators on Compact Manifolds},
+    title = {On the Boundedness of Functions of (Pseudo-) Differential Operators on Compact Manifolds},
     journal = {Duke Math J.},
     volume = {59},
     number = {3},
@@ -187,7 +187,7 @@
 
 @article{SeegerRemarks,
     author = {Seeger, Andreas},
-    title = {Remarks on singular convolution operators},
+    title = {Remarks on Singular Convolution Operators},
     journal = {Studia Math.},
     volume = {97},
     number = {2},
@@ -207,7 +207,7 @@
 
 @article{Tao,
     author = {Tao, Terence},
-    title = {The {B}ochner-{R}iesz implies the Restriction Conjecture},
+    title = {The {B}ochner-{R}iesz Conjecture Implies the Restriction Conjecture},
     journal = {Duke Math. J.},
     volume = {96},
     number = {1},
@@ -284,7 +284,7 @@
 
 @article{LeeSeeger,
     author = {Lee, Sanghyuk and Seeger, Andreas},
-    title = {{L}ebesgue Space Estimates for a class of {F}ourier Integral Operators Associated With Wave Propogation},
+    title = {{L}ebesgue Space Estimates for a Class of {F}ourier Integral Operators Associated with Wave Propogation},
     journal = {Math. Nachr.},
     volume = {286},
     number = {7},
@@ -294,7 +294,7 @@
 
 @article{LeeSeeger2,
     author = {Lee, Sanghyuk and Seeger, Andreas},
-    title = {On radial {F}ourier multipliers and almost everywhere convergence},
+    title = {On Radial {F}ourier Multipliers and Almost Everywhere Convergence},
     journal = {J. Lond. Math. Soc.},
     volume = {91},
     number = {2},
@@ -321,7 +321,7 @@
 
 @article{KimQuasiradial,
     author = {Kim, Jongchon},
-    title = {Endpoint bounds for quasiradial {F}ourier multipliers},
+    title = {Endpoint Bounds for Quasiradial {F}ourier Multipliers},
     journal = {Ann. Mat. Pura Appl. (4)},
     volume = {196},
     year = {2017},
@@ -386,7 +386,7 @@
 
 @article{DaiGongGuoZhang,
     author = {Dai, Song and Gong, Liuwei and Zhang, Ruixiang},
-    title = {Oscillatory integral operators on manifolds and related {K}akeya and {N}ikodym problems},
+    title = {Oscillatory Integral Operators on Manifolds and Related {K}akeya and {N}ikodym problems},
     journal = {Camb. J. Math.},
     volume = {12},
     number = {4},
@@ -396,7 +396,7 @@
 
 @article{GuoWangZhang,
     author = {Guo, Shaoming and Wang, Hong and Zhang, Ruixiang},
-    title = {A dichotomy for {H}\"{o}rmander-type oscillatory integral operators},
+    title = {A Dichotomy for {H}\"{o}rmander-Type Oscillatory Integral Operators},
     journal = {Invent. Math.},
     volume = {238},
     number = {2},
