--- a/main.tex
+++ b/main.tex
@@ -56,6 +56,9 @@
 
 \usepackage[perpage, symbol*]{footmisc}
 
+\usepackage{tikz}
+\usetikzlibrary{matrix}
+\usetikzlibrary{calc}
 
 
 \DeclareMathOperator{\QQ}{\mathbb{Q}}
